--- a/src/main/resources/templates/Header.html
+++ b/src/main/resources/templates/Header.html
@@ -38,25 +38,21 @@ li:hover {
 <body>
 	<header th:fragment="header">
 		<div class="pt-3 px-3 pb-1 bg2ndColor mx-0">
-			<div class="text-end h6 row ps-5 pe-3">
-				<!-- WatCat 폰트 -->
-				<div class="col-4 mt-2">
-					<a href="/" class="h1 float-start text-decoration-none "
-						style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: rgb(182, 0, 55);">
+			<nav class="watcat-nav">
+				<label class="logo ms-4 float-start">
+					<a href="/" class="h1 float-start  text-danger text-decoration-none"
+						style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; line-height : 80px; float:left">
 						WaTCaT</a>
-				</div>
+				</label>
 				
-				<div class="col-8 mt-2 text-white navbar-top-menu">
 					<div class="float-end mx-1 headerLink"
 						th:if="${session.userId != null}">
-						<div class="dropdown ">
-							<!-- <button > -->
-							<img src="/images/p.png"
-								style="width: 70px; position: relative; bottom: 10px;"
+						<div class="dropdown me-3">
+							<img src="/images/catIcon.png"
+								style="width: 80px; width:80px; border-radius:50%; position: relative; bottom: 10px;"
 								class="btn dropdown-toggle" type="button"
 								id="dropdownMenuButton1" data-bs-toggle="dropdown"
 								aria-expanded="false">
-							<!-- </button> -->
 							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1"
 								style="background-color: gray;">
 								<li><a class="dropdown-item " href="/mypage/wishlist"
@@ -66,75 +62,149 @@ li:hover {
 							</ul>
 						</div>
 					</div>
-					<div class="float-end mx-1">
-						<a href="/kobis/total">
-							<button class="btn btn-outline-light">
-								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bar-chart-line-fill" viewBox="0 0 16 16">
-								  <path d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1V2z"/>
-								</svg> 영화 통계
-							</button>
-						</a>
-					</div>
-					<div class="float-end mx-1">
-						<a href="/watcat/kobis">
-							<button class="btn btn-outline-light">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-									fill="currentColor" class="bi bi-trophy-fill"
-									viewBox="0 0 16 16">
-									<path
-										d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935z" />
-								</svg>
-								박스오피스
-							</button>
-						</a>
-					</div>
-
-					<div class="float-end mx-1">
-						<a href="/" class="headerLink">
-							<button class="btn btn-outline-light">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-									fill="currentColor" class="bi bi-journal-richtext"
-									viewBox="0 0 16 16">
-									<path
-										d="M7.5 3.75a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0zm-.861 1.542 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047L11 4.75V7a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 7v-.5s1.54-1.274 1.639-1.208zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z" />
-									<path
-										d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" />
-									<path
-										d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" />
-								</svg>
-								추천 영화
-							</button>
-						</a>
-					</div>
-					<div class="float-end mx-1">
-						<a href="/search" class="headerLink">
-							<button class="btn btn-outline-light">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-									fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-									<path
-										d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-								</svg>
-								영화 검색
-							</button>
-						</a>
-					</div>
-					<div th:if="${session.userId == null}" class="float-end mx-1">
-						<a href="/login" class="headerLink">
-							<button class="btn btn-outline-light">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+					<div class="float-end me-2 login-href" th:if="${session.userId}==null">
+						<a href="/login">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
 									fill="currentColor" class="bi bi-door-open-fill"
 									viewBox="0 0 16 16">
 								<path
 										d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
 								</svg>
-								로그인
-							</button>
+								로그인	
 						</a>
 					</div>
-					<!--오프캔버스버튼 -->
-					<button class="navbar-dark navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
+					
+				<ul class="me-5 text-white"id="nav-menu-item">
+					<li>
+						<a href="/">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+								fill="currentColor" class="bi bi-journal-richtext"
+								viewBox="0 0 16 16">
+								<path
+									d="M7.5 3.75a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0zm-.861 1.542 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047L11 4.75V7a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 7v-.5s1.54-1.274 1.639-1.208zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z" />
+								<path
+									d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" />
+								<path
+									d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" />
+							</svg>
+						추천 영화</a>
+					</li>
+					<li>
+						<a href="/watcat/kobis">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"fill="currentColor" class="bi bi-trophy-fill" viewBox="0 0 16 16">
+								<path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935z" />
+							</svg>
+						박스오피스
+						</a>
+					</li>
+					<li>
+						<a href="/kobis/total">
+						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bar-chart-line-fill" viewBox="0 0 16 16">
+						  <path d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1V2z"/> 
+						</svg>
+						영화통계</a>
+					</li>
+					<li>
+						<a href="/search">
+						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+							fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+							<path
+								d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+						</svg>
+						영화검색</a>
+					</li>
+				</ul>
+				<button class="mt-3 navbar-dark navbar-toggler float-end" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
 				      <span class="navbar-toggler-icon" ></span>
-				    </button> 
+				   </button> 
+			</nav>
+<!-- 				<div class="col-8 mt-2 text-white navbar-top-menu"> -->
+<!-- 					<div class="float-end mx-1 headerLink" -->
+<!-- 						th:if="${session.userId != null}"> -->
+<!-- 						<div class="dropdown "> -->
+<!-- 							<button > -->
+<!-- 							<img src="/images/p.png" -->
+<!-- 								style="width: 70px; position: relative; bottom: 10px;" -->
+<!-- 								class="btn dropdown-toggle" type="button" -->
+<!-- 								id="dropdownMenuButton1" data-bs-toggle="dropdown" -->
+<!-- 								aria-expanded="false"> -->
+<!-- 							</button> -->
+<!-- 							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" -->
+<!-- 								style="background-color: gray;"> -->
+<!-- 								<li><a class="dropdown-item " href="/mypage/wishlist" -->
+<!-- 									style="color: white;">마이페이지</a></li> -->
+<!-- 								<li><a class="dropdown-item btn-logout" -->
+<!-- 									style="color: white;">로그아웃 </a></li> -->
+<!-- 							</ul> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
+<!-- 					<div class="float-end mx-1"> -->
+<!-- 						<a href="/kobis/total"> -->
+<!-- 							<button class="btn btn-outline-light"> -->
+<!-- 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bar-chart-line-fill" viewBox="0 0 16 16"> -->
+<!-- 								  <path d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1V2z"/> -->
+<!-- 								</svg> 영화 통계 -->
+<!-- 							</button> -->
+<!-- 						</a> -->
+<!-- 					</div> -->
+<!-- 					<div class="float-end mx-1"> -->
+<!-- 						<a href="/watcat/kobis"> -->
+<!-- 							<button class="btn btn-outline-light"> -->
+<!-- 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" -->
+<!-- 									fill="currentColor" class="bi bi-trophy-fill" -->
+<!-- 									viewBox="0 0 16 16"> -->
+<!-- 									<path -->
+<!-- 										d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935z" /> -->
+<!-- 								</svg> -->
+<!-- 								박스오피스 -->
+<!-- 							</button> -->
+<!-- 						</a> -->
+<!-- 					</div> -->
+
+<!-- 					<div class="float-end mx-1"> -->
+<!-- 						<a href="/" class="headerLink"> -->
+<!-- 							<button class="btn btn-outline-light"> -->
+<!-- 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" -->
+<!-- 									fill="currentColor" class="bi bi-journal-richtext" -->
+<!-- 									viewBox="0 0 16 16"> -->
+<!-- 									<path -->
+<!-- 										d="M7.5 3.75a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0zm-.861 1.542 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047L11 4.75V7a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 7v-.5s1.54-1.274 1.639-1.208zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z" /> -->
+<!-- 									<path -->
+<!-- 										d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> -->
+<!-- 									<path -->
+<!-- 										d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /> -->
+<!-- 								</svg> -->
+<!-- 								추천 영화 -->
+<!-- 							</button> -->
+<!-- 						</a> -->
+<!-- 					</div> -->
+<!-- 					<div class="float-end mx-1"> -->
+<!-- 						<a href="/search" class="headerLink"> -->
+<!-- 							<button class="btn btn-outline-light"> -->
+<!-- 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" -->
+<!-- 									fill="currentColor" class="bi bi-search" viewBox="0 0 16 16"> -->
+<!-- 									<path -->
+<!-- 										d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" /> -->
+<!-- 								</svg> -->
+<!-- 								영화 검색 -->
+<!-- 							</button> -->
+<!-- 						</a> -->
+<!-- 					</div> -->
+<!-- 					<div th:if="${session.userId == null}" class="float-end mx-1"> -->
+<!-- 						<a href="/login" class="headerLink"> -->
+<!-- 							<button class="btn btn-outline-light"> -->
+<!-- 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" -->
+<!-- 									fill="currentColor" class="bi bi-door-open-fill" -->
+<!-- 									viewBox="0 0 16 16"> -->
+<!-- 								<path -->
+<!-- 										d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" /> -->
+<!-- 								</svg> -->
+<!-- 								로그인 -->
+<!-- 							</button> -->
+<!-- 						</a>	 -->
+<!-- 					</div> -->
+					<!--오프캔버스버튼 -->
+					
 				</div>
 				    
 				    <!-- 오프캔버스내용 -->
@@ -233,7 +303,7 @@ li:hover {
 				        </ul>
 				      </div>  
 				     </div>
-				<div>
+
 					<!-- 로그아웃 ajax -->
 					<script
 						src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -270,10 +340,6 @@ li:hover {
 											})
 									});
 					</script>
-
-				</div>
-			</div>
-		</div>
 	</header>
 </body>
 </html>
