--- a/src/main/resources/templates/account/loginPage.html
+++ b/src/main/resources/templates/account/loginPage.html
@@ -188,12 +188,12 @@
 </head>
 <body>
 	
-			<nav class="d-flex justify-content-between"style="padding-top:16px;padding-left:78px;">
+			<nav class="d-flex justify-content-between mt-3 ms-2"style="padding-top:16px;padding-left:78px;">
 				<div>
 					<a href="/" class="h1 text-danger text-decoration-none" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</a>
 				</div>
 				<div>
-					<button id="btn-signup" class="btn btn-light float-end mt-2" onclick="location.href='/signup'">회원가입</button>
+					<button id="btn-signup" class="btn btn-light float-end mt-4" onclick="location.href='/signup'">회원가입</button>
 				</div>
 			</nav>
 			<div id="login-background" >
