--- a/src/main/resources/templates/MyPage/MypageTrash.html
+++ b/src/main/resources/templates/MyPage/MypageTrash.html
@@ -71,8 +71,8 @@
             <!-- 네비게이션 영역 -->
                 <nav th:include="MyPage/nav :: nav" class="col-lg-3 px-5 min-vh-100" ></nav>
 			<!-- 메인영역 -->
-			<main class="col-lg-9 bg-black " style="padding-top: 100px;">
-				<div class="px-3 mt-4">
+			<main class="col-lg-9 bg-black mt-lg-5" style="margin-top: 30px; ">
+				<div class="w-100 mt-lg-5 pt-lg-5 mx-2px-3 ">
 					<div>
 						<h3 class="text-primary">
 							<b>삭제한 리뷰</b> <img src="/images/mytrash.png"
